Add the files whit the module add new person

--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -9,6 +9,7 @@
       <a mat-list-item routerLink="/Lista-Persona">Lista de personal</a>
       <a mat-list-item routerLink="/Tablero">Arrastra y suelta</a>
       <a mat-list-item routerLink="/Arbol">Arbol</a>
+      <a mat-list-item routerLink="/Nuevo">Nueva persona</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
