--- a/src/app/my-table/my-table.component.html
+++ b/src/app/my-table/my-table.component.html
@@ -1,25 +1,69 @@
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
-    <!-- Id Column -->
+    <!-- Id Column 
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
       <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container>
+    </ng-container> -->
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
       <td mat-cell *matCellDef="let row">{{row.name}}</td>
     </ng-container>
+   
+    <!-- email Column -->
+    <ng-container matColumnDef="lastname">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Apellido</th>
+      <td mat-cell *matCellDef="let row">{{row.lastname}}</td>
+    </ng-container>
+
+    <!-- email Column -->
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Correo</th>
+      <td mat-cell *matCellDef="let row">{{row.email}}</td>
+    </ng-container>
+
+     <!-- Nick Column -->
+     <ng-container matColumnDef="nick">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Apodo</th>
+      <td mat-cell *matCellDef="let row">{{row.nick}}</td>
+    </ng-container>
+
+    <!-- Phone Column -->
+    <ng-container matColumnDef="phone">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Teléfono</th>
+      <td mat-cell *matCellDef="let row">{{row.phone}}</td>
+    </ng-container>
+    
+    <!-- avatar Column 
+    <ng-container matColumnDef="avatar">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Avatar</th>
+      <td mat-cell *matCellDef="let row">{{row.avatar}}</td>
+    </ng-container> -->
+
+     <!-- <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
+      <td mat-cell *matCellDef="let row">
+        <button matTooltip="Editar" [matTooltipPosition]="'left'" mat-icon-button color="basic" (click)="update(row)">
+          <mat-icon aria-label="Editar">edit</mat-icon>
+        </button>
+        <button matTooltip="Elimnar" [matTooltipPosition]="'right'" mat-icon-button color="warn" (click)="delete(row)">
+          <mat-icon aria-label="Eliminar">delete</mat-icon>
+        </button>
+
+      </td> 
+
+    </ng-container> -->
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-
-  <mat-paginator #paginator
+ 
+  <!--<mat-paginator #paginator
       [length]="dataSource.data.length"
       [pageIndex]="0"
       [pageSize]="10"
       [pageSizeOptions]="[10,25, 50, 100, 250]">
-  </mat-paginator>
+  </mat-paginator> -->
 </div>
