--- a/src/app/my-table/my-table.component.html
+++ b/src/app/my-table/my-table.component.html
@@ -42,19 +42,19 @@
       <td mat-cell *matCellDef="let row">{{row.avatar}}</td>
     </ng-container> -->
 
-     <!-- <ng-container matColumnDef="actions">
+      <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
       <td mat-cell *matCellDef="let row">
-        <button matTooltip="Editar" [matTooltipPosition]="'left'" mat-icon-button color="basic" (click)="update(row)">
+        <button mat-stroked-button="Editar" (click)="update(row)">
           <mat-icon aria-label="Editar">edit</mat-icon>
         </button>
-        <button matTooltip="Elimnar" [matTooltipPosition]="'right'" mat-icon-button color="warn" (click)="delete(row)">
+        <button mat-stroked-button="Elimnar" (click)="delete(row)">
           <mat-icon aria-label="Eliminar">delete</mat-icon>
         </button>
 
       </td> 
 
-    </ng-container> -->
+    </ng-container> 
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
