Add the files whit the module add new person

--- a/src/app/frm-person-new/frm-person-new.component.html
+++ b/src/app/frm-person-new/frm-person-new.component.html
@@ -33,7 +33,7 @@
             </mat-error>
 
             <mat-error *ngIf="personForm.controls['email'].hasError('email')">
-              Ingrese el dato en formato de correo.
+              Ingrese el dato en formato de email.
             </mat-error>
           </mat-form-field>
         </div>
